Makefile: fix rbfsum2xml build rbfsum2db.sh: new insertion mechanism rbfsumgen.sh: add generated time station: set fix value in rbfsum data struct station.conf: fill all stations

--- a/station.conf
+++ b/station.conf
@@ -1,653 +1,767 @@
+### LIBRA STATION
+
 [AAI]
-name=Ambon
-lat=-3.68711
-lng=128.194
-enable=1
+name = Ambon
+lat = -3.687109
+lng = 128.19429
+type = 1
+status = 1
 
 [ABJI]
-name=Asem Bagus
-lat=-7.79564
-lng=114.234
-enable=1
+name = Asem Bagus
+lat = -7.795641
+lng = 114.234184
+type = 1
+status = 1
 
 [ALKI]
-name=Alor
-lat=-8.12449
-lng=125.412
-enable=1
+name = Alor
+lat = -8.124491
+lng = 125.411682
+type = 1
+status = 1
 
 [APSI]
-name=Ampana
-lat=-0.910782
-lng=121.649
-enable=1
+name = Ampana
+lat = -0.910782
+lng = 121.648666
+type = 1
+status = 1
 
 [BASI]
-name=Baing
-lat=-10.2189
-lng=120.578
-enable=1
-
-[BATI]
-name=Kupang CTBTO
-lat=-10.2065
-lng=123.663
-enable=1
+name = Baing
+lat = -10.2189
+lng = 120.5777
+type = 1
+status = 1
 
 [BBKI]
-name=Banjar Baru
-lat=-3.4625
-lng=114.841
-enable=1
+name = Banjar Baru
+lat = -3.4625
+lng = 114.8411
+type = 1
+status = 1
 
 [BBSI]
-name=Bau Bau
-lat=-5.48845
-lng=122.569
-enable=1
+name = Bau Bau
+lat = -5.48845
+lng = 122.569458
+type = 1
+status = 1
 
 [BKSI]
-name=Bulukumba
-lat=-5.32184
-lng=120.122
-enable=1
+name = Bulukumba
+lat = -5.321843
+lng = 120.122436
+type = 1
+status = 1
 
 [BLJI]
-name=Banyu Glugur
-lat=-7.74537
-lng=113.595
-enable=1
+name = Banyu Glugur
+lat = -7.745365
+lng = 113.595011
+type = 1
+status = 1
 
 [BLSI]
-name=Bandar Lampung
-lat=-5.36755
-lng=105.245
-enable=1
+name = Bandar Lampung
+lat = -5.367548
+lng = 105.245210
+type = 1
+status = 1
 
 [BNSI]
-name=Bone
-lat=-4.40052
-lng=120.107
-enable=1
+name = Bone
+lat = -4.400521
+lng = 120.106521
+type = 1
+status = 1
 
 [BSSI]
-name=Benteng, P. Selayar
-lat=-6.1428
-lng=120.49
-enable=1
+name = Benteng, P. Selayar
+lat = -6.1428
+lng = 120.4904
+type = 1
+status = 1
 
 [BWJI]
-name=Bawean
-lat=-5.8511
-lng=112.658
-enable=1
+name = Bawean
+lat = -5.8511
+lng = 112.6578
+type = 1
+status = 1
 
 [BYJI]
-name=Banyuwangi
-lat=-8.214
-lng=114.356
-enable=1
+name = Banyuwangi
+lat = -8.2140
+lng = 114.3557
+type = 1
+status = 1
 
 [CBJI]
-name=Citeko
-lat=-6.69805
-lng=106.935
-enable=1
+name = Citeko
+lat = -6.698052
+lng = 106.934951
+type = 1
+status = 1
 
 [CGJI]
-name=Cigeulis Pandeglang Banten
-lat=-6.73437
-lng=108.263
-enable=1
+name = Cigeulis Pandeglang Banten
+lat = -6.73437
+lng = 108.263015
+type = 1
+status = 1
 
 [CMJI]
-name=Cimerak
-lat=-7.7837
-lng=108.449
-enable=1
+name = Cimerak
+lat = -7.783696
+lng = 108.448516
+type = 1
+status = 1
 
 [CNJI]
-name=Cianjur
-lat=-7.309
-lng=107.13
-enable=1
+name = Cianjur
+lat = -7.309
+lng = 107.13
+type = 1
+status = 1
 
 [CTJI]
-name=Tegal
-lat=-7.00755
-lng=109.184
-enable=1
+name = Tegal
+lat = -7.007548
+lng = 109.183578
+type = 1
+status = 1
 
 [DBJI]
-name=Dermaga
-lat=-6.5538
-lng=106.75
-enable=1
+name = Dermaga
+lat = -6.5538
+lng = 106.7497
+type = 1
+status = 1
 
 [DBNI]
-name=Bima
-lat=-8.50189
-lng=118.312
-enable=1
+name = Bima
+lat = -8.501888
+lng = 118.312133
+type = 1
+status = 1
 
 [DNP]
-name=Denpasar
-lat=-8.6774
-lng=115.21
-enable=1
+name = Denpasar
+lat = -8.677404
+lng = 115.209701
+type = 1
+status = 1
 
 [DSRI]
-name=Dabo Singkep
-lat=-0.4793
-lng=104.578
-enable=1
+name = Dabo Singkep
+lat = -0.4793
+lng = 104.5778
+type = 1
+status = 1
 
 [EDFI]
-name=Ende
-lat=-8.7497
-lng=121.69
-enable=1
+name = Ende
+lat = -8.7497
+lng = 121.6903
+type = 1
+status = 1
 
 [EGSI]
-name=Enggano
-lat=-5.3526
-lng=102.277
-enable=1
+name = Enggano
+lat = -5.3526
+lng = 102.2767
+type = 1
+status = 1
 
 [GLMI]
-name=Galela
-lat=1.8381
-lng=127.788
-enable=1
+name = Galela
+lat = 1.8381
+lng = 127.7879
+type = 1
+status = 1
 
 [GMJI]
-name=Gumukmas
-lat=-8.27321
-lng=113.444
-enable=1
+name = Gumukmas
+lat = -8.273206
+lng = 113.444145
+type = 1
+status = 1
 
 [GRJI]
-name=Gresik
-lat=-6.91443
-lng=112.479
-enable=1
-
-[JAY]
-name=Jayapura CTBTO
-lat=-2.51451
-lng=140.704
-enable=1
+name = Gresik
+lat = -6.914433
+lng = 112.479354
+type = 1
+status = 1
 
 [JCJI]
-name=Jatiwangi
-lat=-6.7344
-lng=108.263
-enable=1
+name = Jatiwangi
+lat = -6.7344
+lng = 108.2631
+type = 1
+status = 1
 
 [KASI]
-name=Kota Agung Lampung
-lat=-5.52361
-lng=104.496
-enable=1
+name = Kota Agung Lampung
+lat = -5.52361
+lng = 104.495964
+type = 1
+status = 1
 
 [KBKI]
-name=Kotabaru Kalimantan
-lat=-3.2995
-lng=116.167
-enable=1
+name = Kotabaru Kalimantan
+lat = -3.2995
+lng = 116.1668
+type = 1
+status = 1
 
 [KCSI]
-name=Kutacane
-lat=3.52219
-lng=97.7716
-enable=1
+name = Kutacane
+lat = 3.522185
+lng = 97.771575
+type = 1
+status = 1
 
 [KKSI]
-name=Kolaka
-lat=-4.17172
-lng=121.651
-enable=1
+name = Kolaka
+lat = -4.171717
+lng = 121.651252
+type = 1
+status = 1
 
 [KLI]
-name=Kotabumi
-lat=-4.83629
-lng=104.87
-enable=1
+name = Kotabumi
+lat = -4.836292
+lng = 104.870452
+type = 1
+status = 1
 
 [KLNI]
-name=Mataram
-lat=-8.42189
-lng=116.095
-enable=1
+name = Mataram
+lat = -8.421889
+lng = 116.094932
+type = 1
+status = 1
 
 [KMMI]
-name=Kalianget
-lat=-7.04116
-lng=113.916
-enable=1
+name = Kalianget
+lat = -7.041162
+lng = 113.915725
+type = 1
+status = 1
 
 [KMPI]
-name=Kaimana
-lat=-3.6616
-lng=133.704
-enable=1
+name = Kaimana
+lat = -3.6616
+lng = 133.7044
+type = 1
+status = 1
 
 [KMSI]
-name=Kotamubago
-lat=0.574544
-lng=123.891
-enable=1
+name = Kotamobagu
+lat = 0.574544
+lng = 123.890674
+type = 1
+status = 1
 
 [KPJI]
-name=Karang Pucung
-lat=-7.33319
-lng=108.931
-enable=1
+name = Karang Pucung
+lat = -7.333193
+lng = 108.931228
+type = 1
+status = 1
 
 [KRAI]
-name=Kai Ratu
-lat=-3.31836
-lng=128.395
-enable=1
+name = Kai Ratu
+lat = -3.318356
+lng = 128.394729
+type = 1
+status = 1
 
 [KRJI]
-name=Kerinci
-lat=-2.0912
-lng=101.462
-enable=1
+name = Kerinci
+lat = -2.091199
+lng = 101.461929
+type = 1
+status = 1
 
 [KRK]
-name=Karangkates
-lat=-8.15215
-lng=112.451
-enable=1
+name = Karangkates
+lat = -8.152149
+lng = 112.450637
+type = 1
+status = 1
 
 [LASI]
-name=Langsa
-lat=4.45725
-lng=97.9704
-enable=1
+name = Langsa
+lat = 4.457251
+lng = 97.970367
+type = 1
+status = 1
 
 [LBMI]
-name=Labuha
-lat=-0.637887
-lng=127.501
-enable=1
-
-[LEM]
-name=Lembang CTBTO
-lat=-6.826
-lng=107.617
-enable=1
+name = Labuha
+lat = -0.637887
+lng = 127.500816
+type = 1
+status = 1
 
 [LHSI]
-name=Lahat
-lat=-3.82662
-lng=103.523
-enable=1
+name = Lahat
+lat = -3.826624
+lng = 103.52333
+type = 1
+status = 1
 
 [LWLI]
-name=Liwa
-lat=-5.01747
-lng=104.059
-enable=1
+name = Liwa
+lat = -5.017472
+lng = 104.058914
+type = 1
+status = 1
 
 [MASI]
-name=Muara Aman
-lat=-3.14152
-lng=102.24
-enable=1
+name = Muara Aman
+lat = -3.141521
+lng = 102.239608
+type = 1
+status = 1
 
 [MDSI]
-name=Muara Dua
-lat=-4.48604
-lng=104.178
-enable=1
+name = Muara Dua
+lat = -4.486037
+lng = 104.17823
+type = 1
+status = 1
 
 [MKBI]
-name=Muko-Muko
-lat=-2.44736
-lng=101.24
-enable=1
+name = Muko-Muko
+lat = -2.447358
+lng = 101.239601
+type = 1
+status = 1
 
 [MLSI]
-name=Melaboh
-lat=4.26685
-lng=96.404
-enable=1
+name = Meulaboh
+lat = 4.266851
+lng = 96.403984
+type = 1
+status = 1
 
 [MMPI]
-name=Merauke
-lat=-8.51812
-lng=140.414
-enable=1
+name = Merauke
+lat = -8.518124
+lng = 140.414138
+type = 1
+status = 1
 
 [MNSI]
-name=Mandailing Natal
-lat=0.795498
-lng=99.5796
-enable=1
+name = Mandailing Natal
+lat = 0.795498
+lng = 99.579627
+type = 1
+status = 1
 
 [MPSI]
-name=Mapaga
-lat=0.3374
-lng=119.898
-enable=1
+name = Mapaga
+lat = 0.3374
+lng = 119.898
+type = 1
+status = 1
 
 [MRSI]
-name=Marissa Gorontalo
-lat=0.477076
-lng=121.941
-enable=1
+name = Marissa Gorontalo
+lat = 0.477076
+lng = 121.940589
+type = 1
+status = 1
 
 [MSAI]
-name=Masohi
-lat=-3.34612
-lng=128.928
-enable=1
+name = Masohi
+lat = -3.346117
+lng = 128.928465
+type = 1
+status = 1
 
 [MTKI]
-name=Muara Teweh
-lat=-0.941833
-lng=114.896
-enable=1
+name = Muara Teweh
+lat = -0.941833
+lng = 114.895919
+type = 1
+status = 1
 
 [NBPI]
-name=Nabire
-lat=-1.31824
-lng=135.483
-enable=1
+name = Nabire
+lat = -1.318243
+lng = 135.483398
+type = 1
+status = 1
 
 [NGJI]
-name=Ngawi
-lat=-7.36754
-lng=111.461
-enable=1
+name = Ngawi
+lat = -7.367541
+lng = 111.461257
+type = 1
+status = 1
 
 [NLAI]
-name=Namlea, Pulau Buru
-lat=-3.23897
-lng=127.1
-enable=1
+name = Namlea, Pulau Buru
+lat = -3.238971
+lng = 127.099815
+type = 1
+status = 1
 
 [PBKI]
-name=Pangkalan Bun
-lat=-2.7047
-lng=111.67
-enable=1
+name = Pangkalan Bun
+lat = -2.7047
+lng = 111.6697
+type = 1
+status = 1
 
 [PBSI]
-name=Pulau Batu
-lat=-0.0547
-lng=98.28
-enable=1
+name = Pulau Batu
+lat = -0.0547
+lng = 98.28
+type = 1
+status = 1
 
 [PCJI]
-name=Pacitan
-lat=-8.19466
-lng=111.177
-enable=1
+name = Pacitan
+lat = -8.194656
+lng = 111.177085
+type = 1
+status = 1
 
 [PDSI]
-name=Padang
-lat=-0.911762
-lng=100.462
-enable=1
+name = Padang
+lat = -0.911762
+lng = 100.461723
+type = 1
+status = 1
 
 [PKKI]
-name=Palangkaraya
-lat=-2.2262
-lng=113.945
-enable=1
+name = Palangkaraya
+lat = -2.2262
+lng = 113.9453
+type = 1
+status = 1
 
 [PMSI]
-name=Majene
-lat=-3.50085
-lng=118.915
-enable=1
+name = Majene
+lat = -3.500848
+lng = 118.914939
+type = 1
+status = 1
 
 [PPBI]
-name=Pangkal Pinang
-lat=-2.16154
-lng=106.136
-enable=1
+name = Pangkal Pinang
+lat = -2.161539
+lng = 106.136367
+type = 1
+status = 1
 
 [PPSI]
-name=Pulau Pagai
-lat=-2.766
-lng=100.01
-enable=1
-
-[PSI]
-name=Prapat CTBTO
-lat=2.69518
-lng=98.9239
-enable=1
+name = Pulau Pagai
+lat = -2.766
+lng = 100.01
+type = 1
+status = 1
 
 [PWJI]
-name=Pagerwojo
-lat=-8.02191
-lng=111.804
-enable=1
+name = Pagerwojo
+lat = -8.02191
+lng = 111.804145
+type = 1
+status = 1
 
 [RAPI]
-name=Raja Ampat
-lat=-0.4102
-lng=130.821
-enable=1
-
-[RBSI]
-name=Rajabasa Lampung
-lat=-5.84445
-lng=105.742
-enable=0
+name = Raja Ampat
+lat = -0.4102
+lng = 130.8211
+type = 1
+status = 1
 
 [RGRI]
-name=Rengat
-lat=-0.349101
-lng=102.334
-enable=1
+name = Rengat
+lat = -0.349101
+lng = 102.333816
+type = 1
+status = 1
 
 [RKPI]
-name=Ransiki
-lat=-1.5107
-lng=134.177
-enable=1
+name = Ransiki
+lat = -1.5107
+lng = 134.1773
+type = 1
+status = 1
 
 [RPSI]
-name=Rantau Prapat
-lat=2.15038
-lng=99.7881
-enable=1
+name = Rantau Prapat
+lat = 2.150381
+lng = 99.788053
+type = 1
+status = 1
 
 [RTBI]
-name=Negara
-lat=-8.4597
-lng=114.942
-enable=1
+name = Negara
+lat = -8.4597
+lng = 114.942
+type = 1
+status = 1
 
 [SBJI]
-name=Serang
-lat=-6.11116
-lng=106.132
-enable=1
+name = Serang
+lat = -6.111155
+lng = 106.132423
+type = 1
+status = 1
 
 [SBSI]
-name=Sibolga
-lat=1.39876
-lng=99.4309
-enable=1
+name = Sibolga
+lat = 1.398759
+lng = 99.430938
+type = 1
+status = 1
 
 [SCJI]
-name=Cilacap
-lat=-7.681
-lng=109.169
-enable=1
+name = Cilacap
+lat = -7.681004
+lng = 109.168922
+type = 1
+status = 1
 
 [SDSI]
-name=Sungai Dareh
-lat=-0.932516
-lng=101.428
-enable=1
+name = Sungai Dareh
+lat = -0.932516
+lng = 101.428001
+type = 1
+status = 1
 
 [SGKI]
-name=Sangata
-lat=0.530205
-lng=117.604
-enable=1
+name = Sangata
+lat = 0.530205
+lng = 117.604347
+type = 1
+status = 1
 
 [SGSI]
-name=Sangihe
-lat=3.68598
-lng=125.529
-enable=1
-
-[SIJI]
-name=Sorong CTBTO
-lat=-0.9
-lng=131.3
-enable=1
+name = Sangihe
+lat = 3.68598
+lng = 125.528587
+type = 1
+status = 1
 
 [SISI]
-name=Pulau Saibi
-lat=-1.3265
-lng=99.0895
-enable=1
+name = Pulau Saibi
+lat = -1.3265
+lng = 99.0895
+type = 1
+status = 1
 
 [SKJI]
-name=Sukabumi
-lat=-7.00527
-lng=106.563
-enable=1
+name = Sukabumi
+lat = -7.00527
+lng = 106.563003
+type = 1
+status = 1
 
 [SKSI]
-name=Soroako
-lat=-2.5283
-lng=121.335
-enable=1
+name = Soroako
+lat = -2.5283
+lng = 121.3345
+type = 1
+status = 0
 
 [SLSI]
-name=Sarolangun
-lat=-2.3924
-lng=102.593
-enable=1
+name = Sarolangun
+lat = -2.3924
+lng = 102.5927
+type = 1
+status = 1
 
 [SMKI]
-name=Samarinda
-lat=-0.446136
-lng=117.209
-enable=1
+name = Samarinda
+lat = -0.446136
+lng = 117.208549
+type = 1
+status = 1
 
 [SMPI]
-name=Sarmi
-lat=-1.981
-lng=138.711
-enable=1
+name = Sarmi
+lat = -1.981002
+lng = 138.710525
+type = 1
+status = 1
 
 [SNSI]
-name=Sinabang
-lat=2.40893
-lng=96.3267
-enable=1
+name = Sinabang
+lat = 2.408926
+lng = 96.326705
+type = 1
+status = 1
 
 [SPSI]
-name=Sidrap Palu
-lat=-3.9646
-lng=119.769
-enable=1
+name = Sidrap Palu
+lat = -3.964596
+lng = 119.769081
+type = 1
+status = 1
 
 [SRBI]
-name=Singaraja
-lat=-8.08475
-lng=115.213
-enable=1
+name = Singaraja
+lat = -8.084745
+lng = 115.212608
+type = 1
+status = 1
 
 [SRPI]
-name=Serui
-lat=-1.87552
-lng=136.24
-enable=1
+name = Serui
+lat = -1.875517
+lng = 136.239959
+type = 1
+status = 1
 
 [STKI]
-name=Sintang
-lat=0.065624
-lng=111.477
-enable=1
+name = Sintang
+lat = 0.065624
+lng = 111.47714
+type = 1
+status = 1
 
 [SWI]
-name=Sorong
-lat=-0.862801
-lng=131.259
-enable=1
+name = Sorong
+lat = -0.862801
+lng = 131.259185
+type = 1
+status = 1
 
 [SWJI]
-name=Sawahan
-lat=38.3417
-lng=-95.7129
-enable=1
+name = Sawahan
+lat = -7.641656
+lng = 112.212891
+type = 1
+status = 1
 
 [TBJI]
-name=Tambak Boyo
-lat=-6.8179
-lng=111.848
-enable=1
+name = Tambak Boyo
+lat = -6.8179
+lng = 111.8481
+type = 1
+status = 1
 
 [TNG]
-name=Tangerang
-lat=-6.17194
-lng=106.647
-enable=1
+name = Tangerang
+lat = -6.171935
+lng = 106.646919
+type = 1
+status = 1
 
 [TPRI]
-name=Tanjung Pinang
-lat=0.91836
-lng=104.526
-enable=1
+name = Tanjung Pinang
+lat = 0.91836
+lng = 104.52629
+type = 1
+status = 1
 
 [TRSI]
-name=Tarutung
-lat=2.0256
-lng=98.9594
-enable=1
+name = Tarutung
+lat = 2.0256
+lng = 98.9594
+type = 1
+status = 1
 
 [TSI]
-name=Tuntungan
-lat=3.50118
-lng=98.5646
-enable=1
+name = Tuntungan
+lat = 3.501179
+lng = 98.564567
+type = 1
+status = 1
 
 [TTSI]
-name=Tana Toraja
-lat=-3.04508
-lng=119.819
-enable=1
+name = Tana Toraja
+lat = -3.045083
+lng = 119.818969
+type = 1
+status = 1
 
 [TWSI]
-name=Taliwang
-lat=-8.73818
-lng=116.882
-enable=1
+name = Taliwang
+lat = -8.738178
+lng = 116.882141
+type = 1
+status = 1
 
 [UBSI]
-name=Bengkulu
-lat=-3.7611
-lng=102.271
-enable=1
+name = Bengkulu
+lat = -3.7611
+lng = 102.2714
+type = 1
+status = 1
 
 [UWJI]
-name=Ujung Watu
-lat=-6.41913
-lng=110.947
-enable=1
+name = Ujung Watu
+lat = -6.419125
+lng = 110.947341
+type = 1
+status = 1
 
 [WBSI]
-name=Waikabubak
-lat=-9.64112
-lng=119.391
-enable=1
+name = Waikabubak
+lat = -9.641119
+lng = 119.391166
+type = 1
+status = 1
 
 [WOJI]
-name=Wonogiri
-lat=-7.83715
-lng=110.924
-enable=1
+name = Wonogiri
+lat = -7.837153
+lng = 110.923606
+type = 1
+status = 1
+
+### CTBTO Station
+
+[BATI]
+name = Kupang
+lat = -10.2065
+lng = 123.6633
+type = 2
+status = 1
+
+[JAY]
+name = Jayapura
+lat = -2.514513
+lng = 140.704299
+type = 2
+status = 1
+
+[KAPI]
+name = Kappang
+lat = -5.84445
+lng = 105.742
+type = 2
+status = 1
+
+[LEM]
+name = Lembang
+lat = -6.826
+lng = 107.617
+type = 2
+status = 1
+
+[PSI]
+name = Prapat
+lat = 2.695185
+lng = 98.923934
+type = 2
+status = 1
+
+[SIJI]
+name = Sorong
+lat = -0.9
+lng = 131.3
+type = 2
+status = 1
+
